Fix spacing and styling issues for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 .view{
     min-height: 90vh;
     width: 90vw;
+    padding: 5vh;
     margin: auto;
     padding-bottom: 100px;
     text-align: center;
@@ -153,12 +154,12 @@ a:hover{
 .box{
     visibility: visible;
     height: 50vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     border-style: solid;
     border-width: 2px;
     /*opacity: 1;
-    overflow-x: hidden;
-    overflow-y: scroll;
     transition: visibility 0s, opacity 0.5s linear;*/
 }
 
